unpackaged/main/default/objects/Record_Id_Journal__c/Record_Id_Journal__c.object-meta.xml
<CustomObject>
    <description>Provide a history log of merged and converted records</description>
    <label>Record Id Journal</label>
    <nameField>
        <displayFormat>RIJ-{0000000000}</displayFormat>
        <label>Record Id Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Ids Journal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>