unpackaged/main/default/objects/Record_Id_Journal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Record Ids Journal</relationshipLabel>
    <relationshipName>Record_Ids_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>