unpackaged/main/default/objects/Record_Id_Journal__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Record Ids Journal</relationshipLabel>
    <relationshipName>Record_Ids_Journal</relationshipName>
    <type>Lookup</type>
</CustomField>