unpackaged/main/default/objects/Record_Id_Journal__c/fields/Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Id__c</fullName>
    <label>Original Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>